[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qbo-accounts"
version = "0.1.0"
description = "Python client for the QuickBooks Online Accounts API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]
